k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  # Pod definiton
  template:
    metadata:
      labels:
        component: server
    # Customising Pod behaviour, only a single container needed in this Pod
    spec:
      containers:
        - name: server
          image: thexyman/multi-server
          ports:
            - containerPort: 5000
