k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  # Pod definiton
  template:
    metadata:
      labels:
        component: worker
    # Customising Pod behaviour, only a single container needed in this Pod
    spec:
      containers:
        - name: worker
          image: thexyman/multi-worker
