k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
# Defines how service will behave
spec:
  type: ClusterIP
  selector:
    component: server # tells service to connect all Pods with component: server
  ports:
    - port: 5000
      targetPort: 5000
